Refactor Storage to store id instead of object