@@ -2,14 +2,12 @@ package seedu.ddd.storage;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
 
 import seedu.ddd.commons.exceptions.IllegalValueException;
-import seedu.ddd.model.contact.client.Client;
-import seedu.ddd.model.contact.vendor.Vendor;
+import seedu.ddd.model.contact.common.ContactId;
 import seedu.ddd.model.event.common.Description;
 import seedu.ddd.model.event.common.Event;
 import seedu.ddd.model.event.common.EventId;
@@ -18,8 +16,8 @@ class JsonAdaptedEvent {
     public static final String MISSING_FIELD_MESSAGE_FORMAT = "Event's %s field is missing!";
     private final int eventId;
     private final String description;
-    private final List<JsonAdaptedClient> clients = new ArrayList<>();
-    private final List<JsonAdaptedVendor> vendors = new ArrayList<>();
+    private final List<JsonAdaptedContactId> clientIds = new ArrayList<>();
+    private final List<JsonAdaptedContactId> vendorIds = new ArrayList<>();
 
     /**
      * Constructs a {@code JsonAdapted} with the given event details.
@@ -27,18 +25,14 @@ class JsonAdaptedEvent {
     @JsonCreator
     public JsonAdaptedEvent(
             @JsonProperty("description") String description,
-            @JsonProperty("clients") List<JsonAdaptedClient> clients,
-            @JsonProperty("vendors") List<JsonAdaptedVendor> vendors,
+            @JsonProperty("clientIds") List<JsonAdaptedContactId> clientIds,
+            @JsonProperty("vendorIds") List<JsonAdaptedContactId> vendorIds,
             @JsonProperty("eventId") int eventId
     ) {
         this.eventId = eventId;
         this.description = description;
-        if (clients != null) {
-            this.clients.addAll(clients);
-        }
-        if (vendors != null) {
-            this.vendors.addAll(vendors);
-        }
+        this.clientIds.addAll(clientIds);
+        this.vendorIds.addAll(vendorIds);
     }
 
     /**
@@ -47,12 +41,12 @@ class JsonAdaptedEvent {
     public JsonAdaptedEvent(Event source) {
         description = source.getDescription().description;
         eventId = source.getEventId().eventId;
-        clients.addAll(source.getClients().stream()
-                .map(JsonAdaptedClient::new)
-                .collect(Collectors.toList()));
-        vendors.addAll(source.getVendors().stream()
-                .map(JsonAdaptedVendor::new)
-                .collect(Collectors.toList()));
+        clientIds.addAll(source.getClientIds().stream()
+                .map(JsonAdaptedContactId::new)
+                .toList());
+        vendorIds.addAll(source.getVendorIds().stream()
+                .map(JsonAdaptedContactId::new)
+                .toList());
     }
 
     /**
@@ -61,22 +55,6 @@ class JsonAdaptedEvent {
      * @throws IllegalValueException if there were any data constraints violated in the adapted event.
      */
     public Event toModelType() throws IllegalValueException {
-        final ArrayList<Client> modelClients = new ArrayList<>();
-        if (clients.isEmpty()) {
-            throw new IllegalValueException(String.format(MISSING_FIELD_MESSAGE_FORMAT, Client.class.getSimpleName()));
-        }
-        for (JsonAdaptedClient client : clients) {
-            modelClients.add((Client) client.toModelType());
-        }
-
-        final ArrayList<Vendor> modelVendors = new ArrayList<>();
-        if (vendors.isEmpty()) {
-            throw new IllegalValueException(String.format(MISSING_FIELD_MESSAGE_FORMAT, Vendor.class.getSimpleName()));
-        }
-        for (JsonAdaptedVendor vendor : vendors) {
-            modelVendors.add((Vendor) vendor.toModelType());
-        }
-
         if (description == null) {
             throw new IllegalValueException(String.format(MISSING_FIELD_MESSAGE_FORMAT,
                     Description.class.getSimpleName()));
@@ -91,6 +69,30 @@ class JsonAdaptedEvent {
         }
         final EventId modelEventId = new EventId(eventId);
 
-        return new Event(modelClients, modelVendors, modelDescription, modelEventId);
+        return new Event(modelDescription, modelEventId);
+    }
+
+    /**
+     * Retrieves the clientIds of the event
+     * @throws IllegalValueException if there were any data constraints violated in the adapted contactId.
+     */
+    public List<ContactId> getClientIds() throws IllegalValueException {
+        final List<ContactId> personClientIds = new ArrayList<>();
+        for (JsonAdaptedContactId clientId : clientIds) {
+            personClientIds.add(clientId.toModelType());
+        }
+        return personClientIds;
+    }
+
+    /**
+     * Retrieves the clientIds of the event
+     * @throws IllegalValueException if there were any data constraints violated in the adapted contactId.
+     */
+    public List<ContactId> getVendorIds() throws IllegalValueException {
+        final List<ContactId> personVendorIds = new ArrayList<>();
+        for (JsonAdaptedContactId vendorId : vendorIds) {
+            personVendorIds.add(vendorId.toModelType());
+        }
+        return personVendorIds;
     }
 }
